Step_1.6 - LWC - Enable input for greeting property

--- a/force-app/main/default/lwc/helloWebComponent/helloWebComponent.html
+++ b/force-app/main/default/lwc/helloWebComponent/helloWebComponent.html
@@ -2,6 +2,11 @@
     <lightning-card title="Lightning Web Component" icon-name="custom:custom14">
         <div class="slds-var-m-around_medium">
             <h2>Hello {greeting}!</h2>
+            <lightning-input
+                label="Name"
+                value={greeting}
+                onchange={handleGreetingChange}
+            ></lightning-input>
         </div>
     </lightning-card>
 </template>
