Step_3.7 - LWC - Fix content outside the card (Optional) [**--BADGE--**]

--- a/force-app/main/default/lwc/bearList/bearList.html
+++ b/force-app/main/default/lwc/bearList/bearList.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-card title="Bears" icon-name="utility:animal_and_nature">
-        <div class="slds-card__body_inner">
+        <div class="slds-card__body_inner slds-var-m-horizontal_medium">
             <!-- Start bear list -->
             <template if:true={bears.data}>
                 <lightning-input
