--- a/force-app/main/default/lwc/bearTile/bearTile.html
+++ b/force-app/main/default/lwc/bearTile/bearTile.html
@@ -1,5 +1,15 @@
 <template>
     <lightning-card title={bear.Name} class="bear-tile">
+        <div slot="actions">
+            <lightning-button-icon
+                icon-name="utility:search"
+                icon-class="bear-tile-button"
+                variant="bare"
+                alternative-text="Open record"
+                onclick={handleOpenRecordClick}
+            >
+            </lightning-button-icon>
+        </div>
         <div class="slds-var-p-horizontal_small bear-tile-body">
             <div class="slds-media">
                 <div class="slds-media__figure">
