Step_3.6 - LWC - Code to search for bears (wired)

--- a/force-app/main/default/lwc/bearList/bearList.html
+++ b/force-app/main/default/lwc/bearList/bearList.html
@@ -3,6 +3,16 @@
         <div class="slds-card__body_inner">
             <!-- Start bear list -->
             <template if:true={bears.data}>
+                <lightning-input
+                    type="search"
+                    onchange={handleSearchTermChange}
+                    variant="label-hidden"
+                    class="slds-var-m-bottom_small"
+                    label="Search"
+                    placeholder="Search for bears"
+                    value={searchTerm}
+                >
+                </lightning-input>
                 <lightning-layout multiple-rows="true" pull-to-boundary="small">
                     <template for:each={bears.data} for:item="bear">
                         <lightning-layout-item
@@ -40,6 +50,12 @@
                         </lightning-layout-item>
                     </template>
                 </lightning-layout>
+                <!-- No bears found -->
+                <template if:false={hasResults}>
+                    <div class="slds-align_absolute-center slds-var-m-vertical_small">
+                        This is beary disturbing, we did not find results...
+                    </div>
+                </template>
             </template>
             <!-- End bear list -->
             <!-- Data failed to load -->
