Step_4.6 - LWC - Fix Linter warning: Add label to lightning-button-icon (optional) [**--BADGE--**]

--- a/force-app/main/default/lwc/bearTile/bearTile.html
+++ b/force-app/main/default/lwc/bearTile/bearTile.html
@@ -7,7 +7,7 @@
                 variant="bare"
                 alternative-text="Open record"
                 onclick={handleOpenRecordClick}
-            >
+                ><label>Open record</label>
             </lightning-button-icon>
         </div>
         <div class="slds-var-p-horizontal_small bear-tile-body">
