Step_4.5 - LWC - Handle ”bearview” event on the parent (bearList)

--- a/force-app/main/default/lwc/bearList/bearList.html
+++ b/force-app/main/default/lwc/bearList/bearList.html
@@ -20,7 +20,7 @@
                             size="3"
                             class="slds-var-p-around_x-small"
                         >
-                            <c-bear-tile bear={bear}></c-bear-tile>
+                            <c-bear-tile bear={bear} onbearview={handleBearView}></c-bear-tile>
                         </lightning-layout-item>
                     </template>
                 </lightning-layout>
